--- a/Client/public/main.css
+++ b/Client/public/main.css
@@ -44,3 +44,9 @@
     font-weight: 400;
 
 }
+
+.image-container {
+  border: 2px solid #ccc;
+  background-color: #f7f7f7;
+  text-align: center;
+}
