--- a/Client/public/main.css
+++ b/Client/public/main.css
@@ -38,8 +38,10 @@
 
 }
 
-.image-container {
-  border: 2px solid #ccc;
-  background-color: #f7f7f7;
-  text-align: center;
+.image-container img {
+  max-width: 100%;
+  max-height: 70vh; /* vh unit represents a percentage of the viewport height */
+  height: auto; /* maintain the aspect ratio */
+  display: block; /* remove any extra space below the image */
+  margin: 0 auto; /* optional: to center the image if it's smaller than the container */
 }
