--- a/Client/public/main.css
+++ b/Client/public/main.css
@@ -76,3 +76,15 @@ h1{
   width: auto;
 }
 
+@font-face {
+  font-family: 'Quite Magical';
+  src: url('../../assets/fonts/QuiteMagicalRegular-8VA2.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+.logo-text {
+  font-family: 'Quite Magical', sans-serif;
+  font-size: 2rem;
+}
+
