--- a/client/src/components/SecondPage.css
+++ b/client/src/components/SecondPage.css
@@ -10,27 +10,6 @@
   }
 }
 
-.svg-button {
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-  padding: 0;
-  transition: transform 0.3s ease, filter 0.3s ease;
-}
-
-.svg-button:hover {
-  transform: scale(1.1); /* Scale effect on hover */
-}
-
-.svg-icon {
-  fill: black; /* Default color */
-  transition: fill 0.3s ease; /* Smooth transition effect */
-}
-
-.svg-button:hover .svg-icon {
-  fill: red; /* Color change on hover */
-}
-
 .file-label {
   font-weight: bold;
 }
@@ -42,21 +21,26 @@
 }
 
 .image-container img {
+  min-height: 50vh;
   max-width: 100%;
   max-height: 70vh; /* vh unit represents a percentage of the viewport height */
   height: auto; /* maintain the aspect ratio */
   display: block; /* remove any extra space below the image */
   margin: 0 auto; /* optional: to center the image if it's smaller than the container */
 }
+
 h1 {
   text-align: center;
 }
+
 .upload-column {
   cursor: pointer;
 }
+
 #fileInput {
   display: none;
 }
+
 .column-img {
   width: 100%;
   height: auto;
