--- a/client/src/components/common/IconButton.css
+++ b/client/src/components/common/IconButton.css
@@ -3,6 +3,8 @@
 .svg-button {
   background-color: transparent;
   border: none;
+  width: 40px; /* Adjust width as needed */
+  height: 40px; /* Adjust height as needed */
   margin-right: 8px; /* Adjust as needed */
   margin-left: 8px; /* Adjust as needed */
   cursor: pointer;
@@ -19,6 +21,7 @@
   transition: fill 0.3s ease; /* Smooth transition effect */
 }
 
+/* TODO: what is this? */
 .svg-button:hover .svg-icon {
   fill: red; /* Color change on hover */
 }
