--- a/client/src/components/home_page/SearchBar/SearchBar.css
+++ b/client/src/components/home_page/SearchBar/SearchBar.css
@@ -7,7 +7,8 @@
 }
 
 .search-container {
-  width: 50%;
+  height: 75%;
+  width: 70%;
   display: flex;
   align-items: center;
   background-color: #EEEEEE;
