--- a/client/src/components/second_page/FullSizeImg/FullSizeImg.css
+++ b/client/src/components/second_page/FullSizeImg/FullSizeImg.css
@@ -5,17 +5,16 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.8); /* Semi-transparent black background */
-    display: flex;
+    display: inline-flex;
     justify-content: center;
     align-items: center;
-    z-index: 999; /* Ensure it's above other elements */
-    overflow: auto; /* Enable scrolling */
+    z-index: 1001;
   }
   
   .full-size-image-container img {
-    max-width: none; /* Allow the image to exceed its original width */
-    max-height: none; /* Allow the image to exceed its original height */
-    border: 2px solid #fff; /* White border around the image */
+    max-width: 100%; 
+    max-height: 100%; 
+    object-fit: contain; /* keep aspect ratio */
   }
   
   
